# dashboard_app

./: .gitignore  GEMINI.md  NIFTY50_CONSTITUENTS_GUIDE.md  PRD.md  README.md  STRATEGY_FIXES.md  app.py  auth.py  config.py  executor.py  global_executor.py  live_stratergy.py  market_data_manager.py  missing_routes.py  pyproject.toml  requirements.txt  test_strategy_logic.py  test_zerodha_permissions.py  token_maintenance.py  token_manager.py  token_refresh.py  update_broker_mode.py  vercel.json  verify_connectors.py  verify_db.py  verify_settings.py
.qwen/: settings.json
archive/: temp_style.css
backtest/: COMPARISON.md  FINAL_COMPARISON.md  backtest_metrics.json  backtest_strategy.py  data_loader.py  debug_yf.py  mock_fyers.py  report.html  report_generator.py  run_backtest.py
connectors/: base.py  data_source.py  fyers.py  zerodha.py
migration/: Multi-Broker Plan.md  New Features.md  connectors.md  migrate_settings_to_brokers.py  migrate_to_multi_broker.py  migrate_zerodha_legacy.py
templates/: add_broker.html  base.html  brokers.html  dashboard.html  index.html  login.html  logs.html  performance.html  run_strategy.html  settings.html  token_refresh.html  trading_overview.html
tester_utils/: check_broker_schema.py  check_brokers.py  check_run_status.py  check_trades.py  debug_broker.py  debug_db.py  debug_full_stack.py  debug_user_data.py  debug_user_data_v2.py  fix_broker_ids.py  fix_db_data.py  fix_manual_filled_status.py  inspect_logs.py  inspect_runs.py  inspect_schemas.py  migrate_to_multiuser.py  reconcile_manual_trades.py  test_app_logic.py  (+3 more)
(+75 files in other folders)
